Load more component
* try to make a test for the component

* clean up

* test for button

* add button and page param

* load more images, video, news

* load more web view

* don't show load button

* merge conflict, fix build

* fix all tests

* defensive code, isLoading state

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -4,6 +4,7 @@
   "backHome": "go back home",
   "contact_us": "Contact us",
   "learn_more": "Learn More",
+  "load_more": "Load More",
   "for_water": "For Water",
   "search_input": "Search the web to give water...",
   "404": {
