Add to browser btn
* start to make search counter a react component

* usercontext set up

* show/hide add to btn, searches count with cookies, fix getInitialProps warning

* change Postcss extend plugin, previous plugin was old and with false warning

* delete SearchCount component and web component

* fix storybook

* fix all tests

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,7 @@
 
 {
-  "addToChrome": "Add Elliot for water to Chrome",
+  "addToChrome": "Add Elliot For Water to Chrome",
+  "addToFF": "Add Elliot For Water to Firefox",
   "backHome": "go back home",
   "contact_us": "Contact us",
   "learn_more": "Learn More",
