--- a/locales/it/common.json
+++ b/locales/it/common.json
@@ -1,6 +1,7 @@
 
 {
-  "addToChrome": "Aggiungi Elliot for water a Chrome",
+  "addToChrome": "Aggiungi Elliot For Water a Chrome",
+  "addToFF": "Aggiungi Elliot For Water a Firefox",
   "backHome": "torna alla home",
   "contact_us": "Contact us",
   "learn_more": "Learn More",
