--- a/locales/en/terms.json
+++ b/locales/en/terms.json
@@ -1,1 +1,36 @@
-{}
+{
+  "title": "Terms of Service",
+  "date": "Last updated: March 26, 201",
+  "p1": "Please read these Terms of Service ('Terms', 'Terms of Service') carefully before using the www.elliotforwater.com website (the 'Service') operated by Elliot For Water LTD ('us','we', or 'our').",
+  "p2": "Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.",
+  "p3": "By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.",
+  "subtitle1": "Intellectual Property",
+  "p4": "The Service and its original content, features and functionality are and will remain the exclusive property of Elliot For Water LTD and its licensors. The Service is protected by copyright, trademark, and other laws of both the United Kingdom and foreign countries. Our trademarks and trade dress may not be used in connection with any product or service without the prior written consent of Elliot For Water LTD.",
+  "subtitle2": "Links To Other Web Sites",
+  "p5": "Our Service may contain links to third-party web sites or services that are not owned or controlled by Elliot For Water LTD.",
+  "p6": "Elliot For Water LTD has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Elliot For Water LTD shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.",
+  "p7": "We strongly advise you to read the terms and conditions and privacy policies of any third-party web sites or services that you visit.",
+  "subtitle3": "Termination",
+  "p8": "We may terminate or suspend your access immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.",
+  "p9": "Upon termination, your right to use the Service will immediately cease.",
+  "p10": "All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability.",
+  "subtitle4": "Indemnification",
+  "p11": "",
+  "subtitle5": "Limitation Of Liability",
+  "p12": "In no event shall Elliot For Water LTD, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from (i) your access to or use of or inability to access or use the Service; (ii) any conduct or content of any third party on the Service; (iii) any content obtained from the Service; and (iv) unauthorized access, use or alteration of your transmissions or content, whether based on warranty, contract, tort (including negligence) or any other legal theory, whether or not we have been informed of the possibility of such damage, and even if a remedy set forth herein is found to have failed of its essential purpose.",
+  "subtitle6": "Disclaimer",
+  "p13": "Your use of the Service is at your sole risk. The Service is provided on an 'AS IS' and 'AS AVAILABLE' basis. The Service is provided without warranties of any kind, whether express or implied, including, but not limited to, implied warranties of merchantability, fitness for a particular purpose, non-infringement or course of performance.",
+  "p14": "Elliot For Water LTD its subsidiaries, affiliates, and its licensors do not warrant that a) the Service will function uninterrupted, secure or available at any particular time or location; b) any errors or defects will be corrected; c) the Service is free of viruses or other harmful components; or d) the results of using the Service will meet your requirements.",
+  "subtitle7": "Exclusions",
+  "p15": " Without limiting the generality of the foregoing and notwithstanding any other provision of these terms, under no circumstances will Elliot For Water LTD ever be liable to you or any other person for any indirect, incidental, consequential, special, punitive or exemplary loss or damage arising from, connected with, or relating to your use of the Service, these Terms, the subject matter of these Terms, the termination of these Terms or otherwise, including but not limited to personal injury, loss of data, business, markets, savings, income, profits, use, production, reputation or goodwill, anticipated or otherwise, or economic loss, under any theory of liability (whether in contract, tort, strict liability or any other theory or law or equity), regardless of any negligence or other fault or wrongdoing (including without limitation gross negligence and fundamental breach) by Elliot For Water LTD or any person for whom Elliot For Water LTD is responsible, and even if Elliot For Water LTD has been advised of the possibility of such loss or damage being incurred.",
+  "subtitle8": "Governing Law",
+  "p16": "These Terms shall be governed and construed in accordance with the laws of England and Wales, without regard to its conflict of law provisions.",
+  "p17": " Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.",
+  "subtitle9": "Changes",
+  "p18": "We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.",
+  "p19": "By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, you must stop using the service.",
+  "subtitle10": "Privacy Policy and Cookie Policy",
+  "p20": "Please refer to our Privacy Policy and Cookies Policy. You agree that they constitute part of these terms. You must read our Privacy Policy and Cookies Policy before you use the Service.",
+  "p21": "Contact Us: ",
+  "p22": "If you have any questions about these Terms, please contact us."
+}
