--- a/locales/it/common.json
+++ b/locales/it/common.json
@@ -1,13 +1,19 @@
 
 {
   "addToChrome": "Aggiungi Elliot For Water a Chrome",
-  "addToFF": "Aggiungi Elliot For Water a Firefox",
+  "addToFirefox": "Aggiungi Elliot For Water a Firefox",
   "backHome": "torna alla home",
   "contact_us": "Contact us",
   "learn_more": "Learn More",
   "load_more": "Load More",
   "for_water": "For Water",
   "search_input": "Search the web to give water...",
+  "previous": "Previous",
+  "next": "Next",
+  "header": {
+    "our_mission": "Our mission",
+    "tooltip_count": "This is the number of searches you have done with Elliot for Water. Approximately, every search donates 14 liters of pure drinking water."
+  },
   "404": {
     "title": "Non ti perdere in un bicchiere d'acqua!",
     "description": "Sembrerebbe che la pagina che stai cercando non esiste"
@@ -23,7 +29,7 @@
     "about_us": "About us",
     "faq": "FAQ",
     "privacy": "Privacy Policy",
-    "subscribe": "Subscribe"
+    "terms": "Terms"
   },
   "nav": {
     "why_water": "Why Water",
@@ -33,5 +39,22 @@
     "settings": "Settings",
     "terms": "Terms",
     "privacy": "Privacy"
+  },
+  "forms": {
+    "subscribe": "Subscribe",
+    "submitting": "Submitting...",
+    "submitting_text": "Please wait!",
+    "success": "Success",
+    "success_text": "Thanks for your interest.",
+    "thanks": "Thanks",
+    "thanks_text": "We already have your details",
+    "sorry": "Sorry",
+    "sorry_text": "An error occurred on our server.",
+    "error": "Error",
+    "error_text": "Unable to connect.",
+    "phone": "Phone Number",
+    "name": "Name",
+    "email": "Email",
+    "message": "Type your message here..."
   }
 }
