add metatag to all pages

--- a/locales/en/privacy.json
+++ b/locales/en/privacy.json
@@ -1,4 +1,6 @@
 {
+  "pageTitle": "Privacy Policy",
+  "pageDescription": "We don't store your data permanently, we don't sell data to third parties, and we encrypt your searches.",
   "title": "Privacy",
   "description": "Elliot for Water takes into great consideration your privacy. We want you to fully understand our privacy practices and to be aware of the rights you can exercise.",
   "subtitle1": "We use cookies to provide and improve our services",
