--- a/locales/it/terms.json
+++ b/locales/it/terms.json
@@ -1,4 +1,6 @@
 {
+  "pageTitle": "Terms of service",
+  "pageDescription": "These are the terms of service of the search engine Elliot for Water",
   "title": "Terms of Service",
   "date": "Last updated: March 26, 201",
   "p1": "Please read these Terms of Service ('Terms', 'Terms of Service') carefully before using the www.elliotforwater.com website (the 'Service') operated by Elliot For Water LTD ('us','we', or 'our').",
