Refract Terms Page Issue #84

--- a/locales/en/terms.json
+++ b/locales/en/terms.json
@@ -2,7 +2,7 @@
   "pageTitle": "Terms of service",
   "pageDescription": "These are the terms of service of the search engine Elliot for Water",
   "title": "Terms of Service",
-  "date": "Last updated: March 26, 201",
+  "date": "Last updated: March 26, 2021",
   "p1": "Please read these Terms of Service ('Terms', 'Terms of Service') carefully before using the www.elliotforwater.com website (the 'Service') operated by Elliot For Water LTD ('us','we', or 'our').",
   "p2": "Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.",
   "p3": "By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.",
@@ -17,7 +17,7 @@
   "p9": "Upon termination, your right to use the Service will immediately cease.",
   "p10": "All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability.",
   "subtitle4": "Indemnification",
-  "p11": "",
+  "p11": "You agree to defend, indemnify and hold harmless Elliot For Water LTD and its licensee and licensors, and their employees, contractors, agents, officers and directors, from and against any and all claims, damages, obligations, losses, liabilities, costs or debt, and expenses (including but not limited to attorney's fees), resulting from or arising out of a) your use and access of the Service, or b) a breach of these Terms.",
   "subtitle5": "Limitation Of Liability",
   "p12": "In no event shall Elliot For Water LTD, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from (i) your access to or use of or inability to access or use the Service; (ii) any conduct or content of any third party on the Service; (iii) any content obtained from the Service; and (iv) unauthorized access, use or alteration of your transmissions or content, whether based on warranty, contract, tort (including negligence) or any other legal theory, whether or not we have been informed of the possibility of such damage, and even if a remedy set forth herein is found to have failed of its essential purpose.",
   "subtitle6": "Disclaimer",
