--- a/locales/it/terms.json
+++ b/locales/it/terms.json
@@ -2,12 +2,12 @@
   "pageTitle": "Terms of Service",
   "pageDescription": "Read here terms of service of the search engine Elliot for Water",
   "title": "Terms of Service",
-  "date": "Last updated: Dicember 01, 2021, ",
+  "date": "Last updated: December 01 2021.",
   "p1": "Please read these Terms of Service ('Terms', 'Terms of Service') carefully before using the www.elliotforwater.com website (the 'Service') operated by Elliot For Water Organisation LTD ('us','we', or 'our').",
   "p2": "Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.",
   "p3": "By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.",
   "subtitle1": "Intellectual Property",
-  "p4": "The Service and its original content, features and functionality are and will remain the exclusive property of Elliot For Water Organisation LTD and its licensors. The Service is protected by copyright, trademark, and other laws of both the United Kingdom and foreign countries. Our trademarks and trade dress may not be used in connection with any product or service without the prior written consent of Elliot For Water LTD.",
+  "p4": "The Service and its original content, features and functionality are and will remain the exclusive property of Elliot For Water Organisation LTD and its licensors. The Service is protected by copyright, trademark, and other laws of both the United Kingdom and foreign countries. Our trademarks and trade dress may not be used in connection with any product or service without the prior written consent of Elliot For Water Organisation LTD.",
   "subtitle2": "Links To Other Web Sites",
   "p5": "Our Service may contain links to third-party web sites or services that are not owned or controlled by Elliot For Water Organisation LTD.",
   "p6": "Elliot For Water Organisation LTD has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Elliot For Water Organisation LTD shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.",
