--- a/locales/en/terms.json
+++ b/locales/en/terms.json
@@ -2,7 +2,7 @@
   "pageTitle": "Terms of Service",
   "pageDescription": "Read here terms of service of the search engine Elliot for Water",
   "title": "Terms of Service",
-  "date": "Last updated: December 01 2021.",
+  "date": "Last Update: December 01 2021.",
   "p1": "Please read these Terms of Service ('Terms', 'Terms of Service') carefully before using the www.elliotforwater.com website (the 'Service') operated by Elliot For Water Organisation LTD ('us','we', or 'our').",
   "p2": "Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.",
   "p3": "By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.",
